--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "scripts": {
     "test": "jasmine --config=jasmine.json"
   },
-  "keywords": ["jasmine", "mock", "spy"],
+  "keywords": [
+    "jasmine",
+    "mock",
+    "spy"
+  ],
   "author": "Dídac García",
   "license": "ISC",
   "devDependencies": {
-    "jasmine": "^3.1.0"
+    "jasmine": "^3.5.0"
   }
 }
